--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 markdown: redcarpet
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
-pygments: true
-plugins: ./_plugins
+highlighter: true
+# plugins: ./_plugins
 paginate: 8
 permalink: /:year/:month/:day/:title/
 
