--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ nav:
     url: /
   - text: 学习原则
     url: /experience/
-  - text: 生活
-    url: /life/
+  - text: wiki
+    url: /wiki/
   - text: 文章列表
     url: /archives/
   - text: 关于我
